# react_migration_rag

./: .dockerignore  .env.text  .gitignore  Button.tsx  Dockerfile  README.md  auditor.py  docker-compose.yml  ingest.py  job_store.py  main.py  migration.py  migration_rules.yaml  pyproject.toml  refactor_agent.py  s3_client.py
api/: ingest.py  main.py  migration.py
api/data/: react_19_docs.txt
api/routers/: download.py  migrate.py  results.py  status.py  upload.py
data/: react_19_upgrade.txt
migration/: MULTI-RULE-complex-component.tsx  R19-CTX-001-002-legacyContext.tsx  R19-DOM-003-unmountComponentAtNode.tsx  R19-DOM-005-test-utils.tsx  R19-REF-002-element-ref.tsx  R19-REF-003-MutableRefObject.tsx  R19-REF-004-stringRefs.tsx  R19-TS-002-useRef-no-arg.tsx  R19-TYPES-001-propTypes.tsx  R19-TYPES-002-defaultProps.tsx
react18_files/: R19-DOM-001-ReactDOM-render.tsx  R19-DOM-002-ReactDOM-hydrate.tsx  R19-DOM-004-findDOMNode.tsx  R19-REF-001-forwardRef.tsx  modulepatternfactory.tsx  react-test-renderer-shallow.tsx
terraform/: outputs.tf  providers.tf  resources.tf  terraform.prod.tfvars  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
