[project]
name = "react-migration-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli-local>=0.22.2",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.64",
    "chromadb>=1.5.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core[store]>=1.2.17",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "mypy>=1.19.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
]
